# robin

./: Cargo.toml  buffer.rs
sourceview5/: Cargo.toml
sourceview5/src/: file_loader.rs  file_saver.rs  lib.rs  prelude.rs  view.rs
sourceview5/src/auto/: buffer.rs  completion.rs  completion_cell.rs  completion_context.rs  completion_proposal.rs  completion_provider.rs  completion_snippets.rs  completion_words.rs  encoding.rs  enums.rs  file.rs  file_loader.rs  file_saver.rs  flags.rs  functions.rs  gutter.rs  gutter_lines.rs  gutter_renderer.rs  gutter_renderer_pixbuf.rs  gutter_renderer_text.rs  hover.rs  hover_context.rs  hover_display.rs  hover_provider.rs  indenter.rs  language.rs  language_manager.rs  map.rs  mark.rs  mark_attributes.rs  mod.rs  print_compositor.rs  region.rs  search_context.rs  search_settings.rs  snippet.rs  snippet_chunk.rs  snippet_context.rs  snippet_manager.rs  space_drawer.rs  (+11 more)
sourceview5/src/subclass/: buffer.rs  completion_provider.rs  gutter_renderer.rs  hover_provider.rs  indenter.rs  style_scheme_chooser.rs  view.rs
sourceview5/sys/: Cargo.toml  build.rs
sourceview5/sys/src/: lib.rs
sourceview5/sys/tests/: abi.rs  constant.c  layout.c
src/: main.rs  style.css
