[package]
name = "robin4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gtk]
version = "0.7.0"
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gtk4"

[dependencies.sourceview5]
path = "sourceview5"
